--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "vite",
+    "test": "jest",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint src/",
@@ -31,6 +32,7 @@
     "@storybook/addon-links": "6.5.0-alpha.40",
     "@storybook/react": "6.5.0-alpha.40",
     "@storybook/testing-library": "0.0.9",
+    "@types/jest": "27.4.1",
     "@types/react": "17.0.33",
     "@types/react-dom": "17.0.10",
     "@types/styled-components": "5.1.24",
@@ -41,6 +43,7 @@
     "eslint": "8.6.0",
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-storybook": "0.5.7",
+    "jest": "27.5.1",
     "storybook-builder-vite": "0.1.16",
     "typescript": "4.4.4",
     "vite": "2.7.2"
