--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-storybook": "0.5.7",
     "jest": "27.5.1",
     "storybook-builder-vite": "0.1.16",
+    "ts-jest": "27.1.4",
     "typescript": "4.4.4",
     "vite": "2.7.2"
   }
