--- a/client/package.json
+++ b/client/package.json
@@ -14,23 +14,23 @@
   "dependencies": {
     "@navikt/ds-css": "0.15.12",
     "@navikt/ds-css-internal": "0.7.1",
-    "@navikt/ds-react": "0.16.20",
-    "@navikt/ds-react-internal": "0.11.20",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "@navikt/ds-react": "0.17.25",
+    "@navikt/ds-react-internal": "0.12.27",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-router-dom": "6.2.2",
-    "react-select": "5.2.2",
+    "react-select": "5.3.0",
     "styled-components": "5.3.3",
     "swr": "1.2.2",
     "zod": "3.13.4"
   },
   "devDependencies": {
     "@babel/core": "7.17.5",
-    "@storybook/addon-actions": "6.5.0-alpha.40",
-    "@storybook/addon-essentials": "6.5.0-alpha.40",
-    "@storybook/addon-interactions": "6.5.0-alpha.40",
-    "@storybook/addon-links": "6.5.0-alpha.40",
-    "@storybook/react": "6.5.0-alpha.40",
+    "@storybook/addon-actions": "6.5.0-alpha.64",
+    "@storybook/addon-essentials": "6.5.0-alpha.64",
+    "@storybook/addon-interactions": "6.5.0-alpha.64",
+    "@storybook/addon-links": "6.5.0-alpha.64",
+    "@storybook/react": "6.5.0-alpha.64",
     "@storybook/testing-library": "0.0.9",
     "@types/jest": "27.4.1",
     "@types/react": "17.0.33",
@@ -44,7 +44,7 @@
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-storybook": "0.5.7",
     "jest": "27.5.1",
-    "storybook-builder-vite": "0.1.16",
+    "@storybook/builder-vite": "0.1.29", // TODO: Denne kan ikke brukes enda fordi den har en peerDep til React 17. Submittet issue her: https://github.com/storybookjs/builder-vite/issues/342
     "ts-jest": "27.1.4",
     "typescript": "4.4.4",
     "ulid": "2.3.0",
