--- a/client/package.json
+++ b/client/package.json
@@ -44,7 +44,7 @@
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-storybook": "0.5.7",
     "jest": "27.5.1",
-    "@storybook/builder-vite": "0.1.29", // TODO: Denne kan ikke brukes enda fordi den har en peerDep til React 17. Submittet issue her: https://github.com/storybookjs/builder-vite/issues/342
+    "@storybook/builder-vite": "0.1.29",
     "ts-jest": "27.1.4",
     "typescript": "4.4.4",
     "ulid": "2.3.0",
