--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint src/",
-    "storybook": "start-storybook -p 6006 -s public",
+    "storybook": "start-storybook -p 6006",
     "build-storybook": "BASE_URL=/storybook-static/ build-storybook"
   },
   "dependencies": {
@@ -51,8 +51,5 @@
     "typescript": "4.6.3",
     "ulid": "2.3.0",
     "vite": "2.9.5"
-  },
-  "msw": {
-    "workerDirectory": "public"
   }
 }
