--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint src/",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "BASE_URL=/storybook-static/ build-storybook",
-    "predeploy": "npm run build-storybook",    
+    "predeploy": "npm run build-storybook",
     "deploy-storybook": "gh-pages -d storybook-static"
   },
   "dependencies": {
@@ -47,6 +47,7 @@
     "eslint": "8.13.0",
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-storybook": "0.5.10",
+    "gh-pages": "3.2.3",
     "jest": "27.5.1",
     "msw": "0.39.2",
     "msw-storybook-addon": "1.6.3",
