--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "@storybook/addon-essentials": "6.4.22",
     "@storybook/addon-interactions": "6.4.22",
     "@storybook/addon-links": "6.4.22",
+    "@storybook/addon-queryparams": "6.2.9",
     "@storybook/builder-vite": "0.1.29",
     "@storybook/react": "6.4.22",
     "@storybook/testing-library": "0.0.10",
