--- a/.github/workflows/storybook.yaml
+++ b/.github/workflows/storybook.yaml
@@ -25,9 +25,9 @@ jobs:
               working-directory: client
               run: npm run build-storybook
             - name: Deploy with gh-pages
-              working-directory: client
+            working-directory: client
               run:
-                  git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+                  git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git &&
                   npm run deploy-storybook -- -u "github-actions-bot <support+actions@github.com>"
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
