--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "16.0.0",
     "express": "4.17.3",
     "express-session": "1.17.2",
+    "helmet": "5.0.2",
     "http-proxy-middleware": "2.0.3",
     "ioredis": "5.0.1",
     "jose": "4.5.1",
