--- a/client/package.json
+++ b/client/package.json
@@ -54,7 +54,8 @@
     "ts-jest": "27.1.4",
     "typescript": "4.6.3",
     "ulid": "2.3.0",
-    "vite": "2.9.5"
+    "vite": "2.9.5",
+    "vite-plugin-inspect": "0.5.0"
   },
   "msw": {
     "workerDirectory": "public"
