--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.17.9",
+    "@small-tech/vite-plugin-sri": "1.0.1",
     "@storybook/addon-actions": "6.4.22",
     "@storybook/addon-essentials": "6.4.22",
     "@storybook/addon-interactions": "6.4.22",
