--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,6 @@
   },
   "devDependencies": {
     "@babel/core": "7.17.9",
-    "@small-tech/vite-plugin-sri": "1.0.1",
     "@storybook/addon-actions": "6.4.22",
     "@storybook/addon-essentials": "6.4.22",
     "@storybook/addon-interactions": "6.4.22",
@@ -55,8 +54,7 @@
     "ts-jest": "27.1.4",
     "typescript": "4.6.3",
     "ulid": "2.3.0",
-    "vite": "2.9.5",
-    "vite-plugin-inspect": "0.5.0"
+    "vite": "2.9.5"
   },
   "msw": {
     "workerDirectory": "public"
