--- a/client/package.json
+++ b/client/package.json
@@ -56,6 +56,9 @@
     "ulid": "2.3.0",
     "vite": "3.0.2"
   },
+  "overrides": {
+    "glob-parent": "6.0.2"
+  },
   "msw": {
     "workerDirectory": "public"
   }
