--- a/.github/workflows/deploy-labs.yaml
+++ b/.github/workflows/deploy-labs.yaml
@@ -25,7 +25,7 @@ jobs:
               with:
                   push: true
                   tags: ghcr.io/${{ github.repository }}:latest,${{ env.IMAGE }}
-                  context: Dockerfile.labs
+                  file: Dockerfile.labs
     deployAppToLabs:
         name: Deploy app to labs
         needs: build
