--- a/.github/workflows/snyk.yaml
+++ b/.github/workflows/snyk.yaml
@@ -11,11 +11,11 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: |
-            --all-projects
-            --sarif-file-output=snyk.sarif
-            --severity-threshold=high
+          args: >-
             --org=team-pia
+            --all-projects
+            --severity-threshold=high
+            --sarif-file-output=snyk.sarif
       - name: Upload result to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v2
         with:
