--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "test": "jest",
+    "prebuild": "tsc",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint src/",
