--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint src/",
     "storybook": "start-storybook -p 6006 --disable-telemetry",
     "build-storybook": "build-storybook --disable-telemetry",
-    "deploy-storybook": "gh-pages -d storybook-static"
+    "deploy-storybook": "gh-pages -d storybook-static",
+    "prepare": "cd .. && husky install client/.husky"
   },
   "dependencies": {
     "@navikt/ds-css": "1.3.21",
@@ -49,6 +50,7 @@
     "eslint-plugin-react": "7.30.1",
     "eslint-plugin-storybook": "0.6.1",
     "gh-pages": "4.0.0",
+    "husky": "8.0.1",
     "jest": "28.1.3",
     "msw": "0.44.2",
     "msw-storybook-addon": "1.6.3",
