--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -47,32 +47,20 @@ jobs:
           tags: ghcr.io/${{ github.repository }}:latest,${{ env.IMAGE }}
           context: .
 
-  deployAppToDev:
+  deploy:
+    strategy:
+      matrix:
+        cluster: [dev, prod]
     name: Deploy app to dev
     needs: build
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/endre-paginering'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Deploy to DEV
+      - name: Deploy to ${{ matrix.cluster }}
         uses: nais/deploy/actions/deploy@v1
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          CLUSTER: dev-gcp
+          CLUSTER: ${{ matrix.cluster }}-gcp
           RESOURCE: .nais/nais.yaml
-          VARS: .nais/dev.yaml
-
-  deployAppToProd:
-    name: Deploy app to prod
-    needs: deployAppToDev
-    if: github.ref == 'refs/heads/main'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy to PROD
-        uses: nais/deploy/actions/deploy@v1
-        env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          CLUSTER: prod-gcp
-          RESOURCE: .nais/nais.yaml
-          VARS: .nais/prod.yaml
+          VARS: .nais/${{ matrix.cluster }}.yaml
