--- a/client/package.json
+++ b/client/package.json
@@ -55,6 +55,7 @@
     "jest": "28.1.3",
     "msw": "0.44.2",
     "msw-storybook-addon": "1.6.3",
+    "prettier": "2.7.1",
     "ts-jest": "28.0.7",
     "typescript": "4.7.4",
     "ulid": "2.3.0",
