--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -66,7 +66,7 @@ jobs:
           VARS: .nais/${{ matrix.cluster }}.yaml
 
 
-  deploy-to-de:
+  deploy-to-dev:
     strategy:
       matrix:
         cluster: [dev]
