--- a/.nais/redis.yaml
+++ b/.nais/redis.yaml
@@ -9,7 +9,7 @@ metadata:
     name: fia-radgiver-frontend-redis
     namespace: pia
 spec:
-    image: redis:6.2.6 # or a custom Redis-image
+    image: redis:7-alpine # or a custom Redis-image
     port: 6379
     replicas: # A single Redis-app doesn't scale
         min: 1
