--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,6 +13,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "16"
+          registry-url: "https://npm.pkg.github.com"
+          cache: 'npm'
       - name: Install deps server
         working-directory: server
         run: npm ci
