--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,7 +14,6 @@ jobs:
         with:
           node-version: "16"
           registry-url: "https://npm.pkg.github.com"
-          cache: 'npm'
       - name: Install deps server
         working-directory: server
         run: npm ci
@@ -23,7 +22,7 @@ jobs:
         run: npm run test
       - name: Install deps client
         working-directory: client
-        run: npm ci
+        run: npm ci --ignore-scripts
         env:
           NODE_AUTH_TOKEN: ${{ secrets.READER_TOKEN }}
       - name: Run client tests
