--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,13 @@
 services:
   authserver:
-    image: ghcr.io/navikt/mock-oauth2-server:0.5.5
+    image: ghcr.io/navikt/mock-oauth2-server:0.5.7
     environment:
       TZ: Europe/Oslo
       SERVER_PORT: 6969
       JSON_CONFIG: "{\"interactiveLogin\":true,\"tokenCallbacks\":[{\"issuerId\":\"azure\",\"tokenExpiry\":3600,\"requestMappings\":[{\"requestParam\":\"grant_type\",\"claims\":{\"aud\":[\"lydia-api\"],\"NAVident\":\"Z123456\",\"preferred_username\":\"test.testesen@nav.no\",\"name\":\"Test Testesen\",\"groups\":[\"ensuperbrukerGroupId\"]}}]}]}"
     ports:
       - 6969:6969
+    restart: unless-stopped
 
   azure:
     container_name: azure
@@ -15,18 +16,17 @@ services:
       - "9090:8080"
     volumes:
       - ./stubs:/home/wiremock
+    restart: unless-stopped
 
   postgres:
     image: postgres:14
-#    build:
-#      dockerfile: postgres.Dockerfile
-    restart: always
     environment:
       POSTGRES_PASSWORD: test
     ports:
       - 5432:5432
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    restart: unless-stopped
 
   zookeeper:
     container_name: zookeeper
@@ -42,12 +42,12 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
+    restart: unless-stopped
 
   kafka:
     image: confluentinc/cp-kafka:7.2.2
     depends_on:
       - zookeeper
-    restart: always
     ports:
       - 9093:9093
       - 9092:9092
@@ -67,6 +67,7 @@ services:
       #      KAFKA_LOG_FLUSH_INTERVAL_MESSAGES: Long.MAX_VALUE
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9093,BROKER://kafka:9092
       TZ: Europe/Oslo
+    restart: unless-stopped
 
   backend:
     image: ghcr.io/navikt/lydia-api:latest
@@ -126,12 +127,13 @@ services:
       NAIS_CLUSTER_NAME: "lokal"
       # Spesifikk for remote debugging
       JAVA_TOOL_OPTIONS: -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
+    restart: unless-stopped
 
   redis:
     image: redis:7-alpine
-    restart: always
     ports:
       - 6379:6379
+    restart: unless-stopped
 
   wonderwall:
     image: ghcr.io/nais/wonderwall:latest
@@ -147,7 +149,7 @@ services:
       WONDERWALL_BIND_ADDRESS: 0.0.0.0:2222
       WONDERWALL_UPSTREAM_HOST: host.docker.internal:5173
       WONDERWALL_AUTO_LOGIN: true
-    restart: on-failure
+    restart: unless-stopped
 
   frackend:
     build:
@@ -178,6 +180,7 @@ services:
     volumes:
       - ./server:/home/node/app
       - /home/node/app/node_modules
+    restart: unless-stopped
 
 volumes:
   postgres-data:
