--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -119,6 +119,8 @@ services:
       STATISTIKK_VIRKSOMHET_TOPIC: arbeidsgiver.sykefravarsstatistikk-virksomhet-v1
       IA_SAK_HENDELSE_TOPIC: pia.ia-sak-hendelse-v1
       IA_SAK_TOPIC: pia.ia-sak-v1
+      IA_SAK_STATISTIKK_TOPIC: pia.ia-sak-statistikk-v1
+      IA_LEVERANSE_STATISTIKK_TOPIC: pia.ia-leveranse-statistikk-v1
       BRREG_OPPDATERING_TOPIC: pia.brreg-oppdatering
       # Backend spesifikk env
       BRREG_UNDERENHET_URL: /brregmock/enhetsregisteret/api/underenheter/lastned
