--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,8 @@
     "@navikt/ds-icons": "2.4.0",
     "@navikt/ds-react": "2.4.0",
     "@navikt/ds-react-internal": "2.4.0",
+    "@types/amplitude-js": "8.16.2",
+    "amplitude-js": "8.21.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.8.1",
