Spesifisere csp-directives i backend (helmet) slik at kall til amplitude fungerer
Co-authored-by: Nima Jimale <nima.jimale@nav.no>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -75,7 +75,7 @@ jobs:
         cluster: [dev]
     name: Deploy app to ${{ matrix.cluster }}
     needs: build
-    if: github.ref == 'refs/heads/csrf_rewrite'
+    if: github.ref == 'refs/heads/csp-directives-for-amplitude'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
