--- a/.github/workflows/storybook.yaml
+++ b/.github/workflows/storybook.yaml
@@ -13,11 +13,12 @@ jobs:
         name: Deploy Storybook til Github Pages
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
+            - uses: actions/checkout@v3
             - name: Setup node
-              uses: actions/setup-node@v2
+              uses: actions/setup-node@v3
               with:
-                  node-version: "16"
+                node-version: "16"
+                registry-url: "https://npm.pkg.github.com"
             - name: Install deps
               working-directory: client
               run: npm ci
