--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint src/",
-    "storybook": "start-storybook -p 6006 --disable-telemetry",
-    "build-storybook": "build-storybook --disable-telemetry",
+    "storybook": "storybook dev -p 6006 --disable-telemetry",
+    "build-storybook": "storybook build --disable-telemetry",
     "deploy-storybook": "gh-pages -d storybook-static",
     "prepare": "cd .. && husky install client/.husky"
   },
@@ -32,37 +32,37 @@
   },
   "devDependencies": {
     "@babel/core": "7.21.0",
+    "@storybook/addon-actions": "7.0.3",
+    "@storybook/addon-essentials": "7.0.3",
+    "@storybook/addon-interactions": "7.0.3",
+    "@storybook/addon-links": "7.0.3",
+    "@storybook/react": "7.0.3",
+    "@storybook/react-vite": "7.0.3",
+    "@storybook/testing-library": "0.1.0",
     "@types/amplitude-js": "8.16.2",
     "@types/jest": "29.4.0",
-    "@types/react": "18.0.28",
+    "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
     "@types/styled-components": "5.1.26",
-    "@storybook/addon-actions": "6.5.16",
-    "@storybook/addon-essentials": "6.5.16",
-    "@storybook/addon-interactions": "6.5.16",
-    "@storybook/addon-links": "6.5.16",
-    "@storybook/addon-queryparams": "6.2.9",
-    "@storybook/builder-vite": "0.4.2",
-    "@storybook/react": "6.5.16",
-    "@storybook/testing-library": "0.0.13",
-    "@typescript-eslint/eslint-plugin": "5.53.0",
-    "@typescript-eslint/parser": "5.53.0",
-    "@vitejs/plugin-react": "2.2.0",
+    "@typescript-eslint/eslint-plugin": "5.58.0",
+    "@typescript-eslint/parser": "5.58.0",
+    "@vitejs/plugin-react": "3.1.0",
     "babel-loader": "9.1.2",
-    "eslint": "8.34.0",
+    "eslint": "8.38.0",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-storybook": "0.6.11",
-    "gh-pages": "4.0.0",
+    "gh-pages": "5.0.0",
     "husky": "8.0.3",
     "jest": "29.4.3",
-    "msw": "1.0.1",
-    "msw-storybook-addon": "1.7.0",
+    "msw": "1.2.1",
+    "msw-storybook-addon": "1.8.0",
     "prettier": "2.8.4",
+    "storybook": "7.0.3",
     "ts-jest": "29.0.5",
     "typescript": "5.0.4",
     "ulid": "2.3.0",
-    "vite": "4.1.4"
+    "vite": "4.2.1"
   },
   "overrides": {
     "glob-parent": "6.0.2",
